# AllPairsReachability

./: CMakeLists.txt  compile.py  graphReducer.py  graphTimeReducer.py  meassureAll.py  measureAll.py  readme.md
src/: main.cpp
src/algorithm.reach.allPair/: ABFSPDAPReachAlgorithmImplementation.h  AdvancedBFSOverlayPDAPReachAlgorithm.cpp  AdvancedBFSOverlayPDAPReachAlgorithm.h  BFSOPDAPReachAlgorithmImplementation.h  BFSOverlayPDAPReachAlgorithm.cpp  BFSOverlayPDAPReachAlgorithm.h  BidirectionalSuperVertexAlgorithm.cpp  BidirectionalSuperVertexAlgorithm.h  BidirectionalSuperVertexAlgorithmImplementation.h  BidirectionalSuperVertexPDAPReachAlgorithm.cpp  BidirectionalSuperVertexPDAPReachAlgorithm.h  CachingBFSAPReachAlgorithm.cpp  CachingBFSAPReachAlgorithm.h  CachingDFSAPReachAlgorithm.cpp  CachingDFSAPReachAlgorithm.h  DFSOverlayPDAPReachAlgorithm.cpp  DFSOverlayPDAPReachAlgorithm.h  DSOPDAPReachAlgorithmImplementation.h  DynamicAPReachAlgorithm.cpp  DynamicAPReachAlgorithm.h  DynamicSSBasedDAPReachAlgorithm.cpp  DynamicSSBasedDAPReachAlgorithm.h  LazyBFSAPReachAlgorithm.cpp  LazyBFSAPReachAlgorithm.h  LazyDFSAPReachAlgorithm.cpp  LazyDFSAPReachAlgorithm.h  PartitionedAPReachAlgorithm.cpp  PartitionedAPReachAlgorithm.h  PartitionedDAPReachAlgorithm.cpp  PartitionedDAPReachAlgorithm.h  PartitionedDAPReachAlgorithmImplementation.cpp  PartitionedDAPReachAlgorithmImplementation.h  PartitionedDynamicAPReachAlgorithm.cpp  PartitionedDynamicAPReachAlgorithm.h  ReverseBFSPartitionedAPReachAlgorithm.cpp  ReverseBFSPartitionedAPReachAlgorithm.h  SBFSPDAPReachAlgorithmImplementation.h  SSBasedDAPReachAlgorithm.cpp  SSBasedDAPReachAlgorithm.h  SSBasedDAPReachAlgorithmImplementation.cpp  (+19 more)
src/converter/: ConverterMain.cpp  GraphFileConverter.cpp  GraphFileConverter.h
src/generator/: RandomDoubleQueryGenerator.cpp  RandomDoubleQueryGenerator.h
src/handler/: AlgorithmHandler.cpp  AlgorithmHandler.h  AlgorithmTester.cpp  AlgorithmTester.h  FactoryFacade.h
src/handler/factories/: ABFSOFactory.cpp  ABFSOFactory.h  AlgorithmFactory.cpp  AlgorithmFactory.h  BFSOFactory.cpp  BFSOFactory.h  BiSuperFactory.cpp  BiSuperFactory.h  DFSOFactory.cpp  DFSOFactory.h  FactoryFacade.h  PartitionedFactory.cpp  PartitionedFactory.h  ReverseBFSFactory.cpp  ReverseBFSFactory.h  SBFSOFactory.cpp  SBFSOFactory.h  SSBasedFactory.cpp  SSBasedFactory.h  SimplePartitionFactory.cpp  SimplePartitionFactory.h  SuperVertexFactory.cpp  SuperVertexFactory.h  TwoWayFactory.cpp  TwoWayFactory.h
src/partition/: KahipAdapter.cpp  KahipAdapter.h  OldPartitioner.cpp  OldPartitioner.h  Partitioner.cpp  Partitioner.h
tests/: TestDynamicAPReachAlgorithm.cc  TestDynamicAPReachAlgorithm.h  TestPartitionedDAPReachAlgorithm.cpp  TestSSBasedDAPReachAlgorithm.cpp  TestStaticBFSAPReachAlgorithm.cpp
